J16: use .toList instead of .collect(Collectors.toList())